--- a/Tubes-Strategi-Algoritma/src/index.css
+++ b/Tubes-Strategi-Algoritma/src/index.css
@@ -45,11 +45,11 @@
 }
 
 .body-data{
-  background: url("/src/assets/bg81.jpg");
+  background: black;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: max-content;
 }
 
 .body-result{
@@ -61,7 +61,7 @@
 }
 
 .body-aboutus{
-  background: url("/src/assets/bg91.jpg");
+  background: url("/src/assets/bg51.jpg");
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
