--- a/Tubes-Strategi-Algoritma/src/index.css
+++ b/Tubes-Strategi-Algoritma/src/index.css
@@ -57,7 +57,7 @@
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: max-content;
 }
 
 .body-aboutus{
